Админка - работа с пользователями

--- a/Client/Pages/Auth/Register.cshtml
+++ b/Client/Pages/Auth/Register.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Регистрация";
 }
 
-<div class="container text-center ">
+<div class="container text-center pb-5">
     <div class="row main-page-div align-items-center">
         <div class="col-3">
         </div>
