--- a/Client/Pages/Cart/UserCart.cshtml
+++ b/Client/Pages/Cart/UserCart.cshtml
@@ -7,7 +7,7 @@
 
 
 
-<div class="container my-4">
+<div class="container my-4 pb-5">
     <h2 class="text-center mb-4">Корзина</h2>
 
     @if (Model.CartItems == null || !Model.CartItems.Any())
