--- a/Client/Pages/Index.cshtml
+++ b/Client/Pages/Index.cshtml
@@ -4,7 +4,9 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="container text-center mt-5">
+<p class="text-uppercase text-muted text-center">Каталог картин</p>
+
+<div class="container text-center pb-5 pt-3">
     <div class="row showcase-page-div align-items-center header">
         <div class="col">
         </div>
