--- a/Client/Pages/Admin/Users/ChangeUser.cshtml
+++ b/Client/Pages/Admin/Users/ChangeUser.cshtml
@@ -5,4 +5,55 @@
     ViewData["ActivePAge"] = "ChangeUser";
 }
 
-<h1>Change User</h1>
+<div class="container text-center">
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-10">
+
+            @if (Model.Users == null || !Model.Users.Any())
+            {
+                <h2 class="text-center">Пользователи не найдены</h2>
+            }
+            else
+            {
+                @foreach (var user in Model.Users)
+                {
+                    <div class="card my-3 rounded-0 mt-5 shadow ">
+                        <div class="card-body">
+                            <div class="card mb-2 rounded-0">
+                                <div class="row g-0 align-items-center">
+                                   
+                                    <div class="col-md-6">
+                                        <div class="card-body">
+                                            <small class="text-muted">Name: <strong>@user.FullName</strong></small>           
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <p class="card-text">
+                                            <small class="text-muted">Email: <strong>@user.Email</strong></small>
+                                        </p>                                       
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-footer d-flex justify-content-around">
+                            <a asp-page="/Admin/Users/Edit"
+                               asp-route-id="@user.Id"
+                               asp-route-returnUrl="@Url.ActionContext.HttpContext.Request.Path"
+                               class="btn mx-1 btn-outline-dark rounded-0"
+                               style="width: 50%;">
+                                Edit
+                            </a>
+
+                            <a asp-page="/Admin/Products/DeleteProduct"
+                               asp-route-id="@user.Id"
+                               class="btn btn-dark mx-1 rounded-0"
+                               style="width: 50%;">
+                                Delete
+                            </a>
+                        </div>
+                    </div>
+                }
+            }
+        </div>
+    </div>
+</div>
