--- a/Client/Pages/Admin/_Layout.cshtml
+++ b/Client/Pages/Admin/_Layout.cshtml
@@ -52,7 +52,7 @@
                      
 
                         <h6 class="mt-3  text-secondary">Пользователи:</h6>
-                        <a asp-page="/Admin/Users/ChangeUser" class="@((ViewData["ActivePage"]?.ToString() == "ChangeUser") ? "active" : "")">Изменить пользователя</a>
+                        <a asp-page="/Admin/Users/ChangeUser" class="@((ViewData["ActivePage"]?.ToString() == "ChangeUser") ? "active" : "")">Пользователи</a>
                     </nav>
                 
             </div>
