--- a/Client/Pages/Order/Details.cshtml
+++ b/Client/Pages/Order/Details.cshtml
@@ -5,7 +5,7 @@
 
 }
 
-<div class="container text-center">
+<div class="container text-center pb-5">
     <div class="row align-items-center">
         <div class="col">
         </div>
