--- a/Client/Pages/Store/Contacts.cshtml
+++ b/Client/Pages/Store/Contacts.cshtml
@@ -5,7 +5,9 @@
 
 }
 
-<div class="container py-5">
+<p class="text-uppercase text-muted text-center">Наши контакты</p>
+
+<div class="container pb-5 pt-3">
     <h3 class="text-center mb-5">Мы вам рады</h3>
     <div class="row justify-content-between">
         <!-- Блок контактов -->
