--- a/Client/Pages/Store/CustomPainting.cshtml
+++ b/Client/Pages/Store/CustomPainting.cshtml
@@ -8,7 +8,7 @@
 <p class="text-uppercase text-muted text-center">Картины на заказ</p>
 
 <!-- Блок 1 -->
-<div class="container section pb-5 pt-5">
+<div class="container section pb-5 pt-3">
    
     <div class="row">
         <!-- Левая колонка: заголовок -->
@@ -27,12 +27,13 @@
                 <a href="#" class="btn btn-dark me-2 p-4 rounded-0">УЗНАТЬ СТОИМОСТЬ КАРТИНЫ</a>
             </div>
             <div class="mt-3 d-flex justify-content-center">
-                <a href="#" class="btn-outline text-dark m-2">НАПИСАТЬ В WHATSAPP</a>
-                <a href="#" class="btn-outline text-dark m-2">TELEGRAM</a>
+                <a href="https://wa.me/79253247772" class="btn-outline text-dark m-2">НАПИСАТЬ В WHATSAPP</a>
+                <a href="https://t.me/+79253247772" class="btn-outline text-dark m-2">TELEGRAM</a>
             </div>
         </div>
     </div>
 </div>
+
 
 <!-- Блок 2 -->
 <div class="container section pt-5 pb-5">
@@ -47,8 +48,8 @@
                 <a href="#" class="btn btn-dark me-2 p-4 rounded-0">УЗНАТЬ СТОИМОСТЬ КАРТИНЫ</a>
             </div>
             <div class="mt-3 d-flex justify-content-center">
-                <a href="#" class="btn-outline text-dark m-2">НАПИСАТЬ В WHATSAPP</a>
-                <a href="#" class="btn-outline text-dark m-2">TELEGRAM</a>
+                <a href="https://wa.me/79253247772" class="btn-outline text-dark m-2">НАПИСАТЬ В WHATSAPP</a>
+                <a href="https://t.me/+79253247772" class="btn-outline text-dark m-2">TELEGRAM</a>
             </div>
         </div>
 
@@ -72,8 +73,8 @@
                 <a href="#" class="btn btn-dark me-2 p-4 rounded-0">УЗНАТЬ СТОИМОСТЬ КАРТИНЫ</a>
             </div>
             <div class="mt-3 d-flex justify-content-center">
-                <a href="#" class="btn-outline text-dark m-2">НАПИСАТЬ В WHATSAPP</a>
-                <a href="#" class="btn-outline text-dark m-2">TELEGRAM</a>
+                <a href="https://wa.me/79253247772" class="btn-outline text-dark m-2">НАПИСАТЬ В WHATSAPP</a>
+                <a href="https://t.me/+79253247772" class="btn-outline text-dark m-2">TELEGRAM</a>
             </div>
         </div>
 
