--- a/Client/Pages/Admin/_Layout.cshtml
+++ b/Client/Pages/Admin/_Layout.cshtml
@@ -5,72 +5,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Admin</title>
     <script type="importmap"></script>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />    
+
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Client.styles.css" asp-append-version="true" />
+
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+
+        footer {
+            height: 50px;
+        }
+
+        header {
+            height: 56px;
+        }
+    
+    </style>
 </head>
-<body>
+<body class="admin-layout">
+    <!-- Header -->
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow for_header">
+        <nav class="navbar navbar-expand-sm navbar-light bg-white border-bottom box-shadow for_header">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">OnlineShop</a>
-
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
-@* 
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
-
-                    <partial name="_LoginPartial" />
-                </div> *@
             </div>
         </nav>
     </header>
 
-    <div class="container-fluid w-100 m-0">
-        <div class="row">
-            <!-- Панель навигации слева -->
-            <div class="col-2 sidebar">
-             
+    <!-- Content -->
+    <div class="admin-content">
+        <!-- Sidebar -->
+        <div class="sidebar">
+            <nav>
+                <h6 class="mt-3 text-secondary">Статистика:</h6>
+                <a asp-page="/Admin/Statistics/Statistic" class="@((ViewData["ActivePage"]?.ToString() == "Statistic") ? "active" : "")">Статистика</a>
 
-                    <nav>
-                        <h6 class="mt-3  text-secondary">Статистика:</h6>
-                        <a asp-page="/Admin/Statistics/Statistic" class="@((ViewData["ActivePage"]?.ToString() == "Statistic") ? "active" : "")">Статистика</a>
+                <h6 class="mt-3 text-secondary">Заказы:</h6>
+                <a asp-page="/Admin/Orders/Pending" class="@((ViewData["ActivePage"]?.ToString() == "Pending") ? "active" : "")">Ожидают</a>
+                <a asp-page="/Admin/Orders/Processing" class="@((ViewData["ActivePage"]?.ToString() == "Processing") ? "active" : "")">В процессе</a>
+                <a asp-page="/Admin/Orders/Completed" class="@((ViewData["ActivePage"]?.ToString() == "Completed") ? "active" : "")">Завершенные</a>
+                <a asp-page="/Admin/Orders/Cancelled" class="@((ViewData["ActivePage"]?.ToString() == "Cancelled") ? "active" : "")">Отмененные</a>
 
-                        <h6 class="mt-3 text-secondary">Заказы:</h6>
-                        <a asp-page="/Admin/Orders/Pending" class="@((ViewData["ActivePage"]?.ToString() == "Pending") ? "active" : "")">Ожидают</a>
-                        <a asp-page="/Admin/Orders/Processing" class="@((ViewData["ActivePage"]?.ToString() == "Processing") ? "active" : "")">В процессе</a>
-                        <a asp-page="/Admin/Orders/Completed" class="@((ViewData["ActivePage"]?.ToString() == "Completed") ? "active" : "")">Завершенные</a>
-                        <a asp-page="/Admin/Orders/Cancelled" class="@((ViewData["ActivePage"]?.ToString() == "Cancelled") ? "active" : "")">Отмененные</a>
+                <h6 class="mt-3 text-secondary">Продукты:</h6>
+                <a asp-page="/Admin/Products/ChangeProduct" class="@((ViewData["ActivePage"]?.ToString() == "ChangeProduct") ? "active" : "")">Продукты</a>
+                <a asp-page="/Admin/Products/AddProduct" class="@((ViewData["ActivePage"]?.ToString() == "AddProduct") ? "active" : "")">Добавить продукт</a>
 
-                        <h6 class="mt-3  text-secondary">Продукты:</h6>
-                        <a asp-page="/Admin/Products/ChangeProduct" class="@((ViewData["ActivePage"]?.ToString() == "ChangeProduct") ? "active" : "")">Продукты</a>
-                        <a asp-page="/Admin/Products/AddProduct" class="@((ViewData["ActivePage"]?.ToString() == "AddProduct") ? "active" : "")">Добавить продукт</a>
-                     
+                <h6 class="mt-3 text-secondary">Пользователи:</h6>
+                <a asp-page="/Admin/Users/ChangeUser" class="@((ViewData["ActivePage"]?.ToString() == "ChangeUser") ? "active" : "")">Пользователи</a>
+            </nav>
+        </div>
 
-                        <h6 class="mt-3  text-secondary">Пользователи:</h6>
-                        <a asp-page="/Admin/Users/ChangeUser" class="@((ViewData["ActivePage"]?.ToString() == "ChangeUser") ? "active" : "")">Пользователи</a>
-                    </nav>
-                
-            </div>
+        <!-- Main Content -->
+        <div class="main-content">
+            <main role="main">
+                @if (TempData["Notification"] != null)
+                {
+                    <div id="notification" class="alert  alert-@TempData["NotificationType"] position-fixed bottom-0 end-0 m-3 z-3" role="alert">
+                        @TempData["Notification"]
+                    </div>
+                }
 
-            <div class="col-10">
-                <main role="main" class="pb-3">
-                    @RenderBody()
-                </main>
-            </div>
+                @RenderBody()
+            </main>
         </div>
     </div>
-   
 
+@*     <!-- Footer -->
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2025 - Client - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
-    </footer>
+    </footer> *@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
