--- a/Client/Pages/Index.cshtml
+++ b/Client/Pages/Index.cshtml
@@ -42,12 +42,10 @@
                                 <div class="card-body text-center p-0">
                                     <h5 class="fw-bold">@product.Name</h5>
 
-                                    @*    <p class="text-muted">Размер картины <span class="border border-success text-success px-2 py-1 rounded">@product.Size</span></p> *@
-
-
                                     <p class="fs-4 fw-bold">@product.Price $</p>
 
-                                    <a asp-page="/Cart/Add" asp-route-productId="@product.Id"
+                                    <a asp-page="/Cart/Add" 
+                                        asp-route-productId="@product.Id"                                        
                                        class="btn btn-dark w-100 rounded-0">ЗАКАЗАТЬ КАРТИНУ</a>
                                 </div>
                             </div>
