--- a/Client/wwwroot/css/site.css
+++ b/Client/wwwroot/css/site.css
@@ -85,13 +85,33 @@ a.body {
 }
 
 
+/* Стили для ссылок  Админка*/
+.admin-layout {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;    
+}
+
+.admin-content {
+    display: flex;
+    flex: 1;
+    overflow: hidden;
+   
+}
+.main-content {
+    flex: 1;
+    overflow-y: auto;
+    padding: 1rem;
+   
+}
+
 .sidebar {
     background-color: #1e2124;
     height: 100vh;
     padding-top: 20px;
+    overflow-y: auto;
+    padding: 0 20px;
 }
-
-
 
     /* Стили для ссылок */
     .sidebar a {
