--- a/Client/Pages/Index.cshtml
+++ b/Client/Pages/Index.cshtml
@@ -53,6 +53,31 @@
                     }
                 }
 
+                <nav aria-label="Page navigation">
+                    <ul class="pagination justify-content-center custom-pagination mt-4">
+                        @if (Model.CurrentPage > 1)
+                        {
+                            <li class="page-item rounded-0">
+                                <a class="page-link rounded-0" asp-route-pageNumber="@(Model.CurrentPage - 1)">Назад</a>
+                            </li>
+                        }
+
+                        @for (int i = 1; i <= Model.TotalPages; i++)
+                        {
+                            <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
+                                <a class="page-link rounded-0" asp-route-pageNumber="@i">@i</a>
+                            </li>
+                        }
+
+                        @if (Model.CurrentPage < Model.TotalPages)
+                        {
+                            <li class="page-item">
+                                <a class="page-link rounded-0" asp-route-pageNumber="@(Model.CurrentPage + 1)">Вперёд</a>
+                            </li>
+                        }
+                    </ul>
+                </nav>
+
             </div>
         </div>
 
