--- a/Client/wwwroot/css/site.css
+++ b/Client/wwwroot/css/site.css
@@ -155,3 +155,27 @@ a.body {
 
 
 
+/*пагинация*/
+.custom-pagination .page-item {
+    margin: 0 3px;
+}
+
+.custom-pagination .page-link {
+    background-color: white;
+    color: black;
+    border: 1px solid #ccc;
+    border-radius: 0;
+    padding: 6px 12px;
+    transition: 0.2s;
+}
+
+    .custom-pagination .page-link:hover {
+        background-color: #f0f0f0;
+        color: black;
+    }
+
+.custom-pagination .page-item.active .page-link {
+    background-color: black;
+    color: white;
+    border-color: black;
+}
